[tool.poetry]
name = "pyinteraph2"
version = "0.1.0"
description = ""
authors = ["Matteo Tiberti, Gaetano Invernizzi, Yuval Inbar, Matteo Lambrughi, Gideon Schreiber, Elena Papaleo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.16"

[tool.poetry.group.dev.dependencies]
biopython = "1.78"
cython = "0.29.23"
matplotlib = "~3.3"
networkx = "2.5.1"
pandas = "~1.3"
scipy = "~1.7"
MDAnalysis = "2.0.0"
pytest = "~6.2"
mock = "~4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
